<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeActivity">

    <TextView
        android:id="@+id/tv_daily_steps_prompt"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:textStyle="bold"
        android:text="@string/daily_steps"
        android:textSize="@dimen/home_title_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/imageview_daily_steps_background"/>

    <ImageView
        android:id="@+id/imageview_daily_steps_background"
        android:layout_width="@dimen/txt_bkg_color_width"
        android:layout_height="@dimen/txt_bkg_color_height"
        android:contentDescription="@string/daily_step_background"
        android:background="@color/colorPrimary"
        app:srcCompat="@android:drawable/dialog_holo_light_frame"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_daily_steps_prompt"
        app:layout_constraintBottom_toTopOf="@id/tv_daily_distance_prompt"/>

    <TextView
        android:id="@+id/tv_daily_steps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/home_txt_size"
        android:text=""
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_daily_steps_prompt"
        app:layout_constraintBottom_toTopOf="@id/tv_daily_distance_prompt"/>


    <TextView
        android:id="@+id/tv_daily_distance_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="@dimen/home_title_size"
        android:text="@string/daily_distance"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_daily_steps"
        app:layout_constraintBottom_toTopOf="@id/imageview_daily_distance_background"/>

    <ImageView
        android:id="@+id/imageview_daily_distance_background"
        android:layout_width="@dimen/txt_bkg_color_width"
        android:layout_height="@dimen/txt_bkg_color_height"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/daily_distance_background"
        app:srcCompat="@android:drawable/dialog_holo_light_frame"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_daily_distance_prompt"
        app:layout_constraintBottom_toTopOf="@id/btn_start_walk"/>

    <TextView
        android:id="@+id/tv_daily_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/home_txt_size"
        android:text=""
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_daily_distance_prompt"
        app:layout_constraintBottom_toTopOf="@id/btn_start_walk"/>

    <Button
        android:id="@+id/btn_stop_walk"
        android:layout_width="@dimen/btn_start_walk_width"
        android:layout_height="@dimen/btn_start_walk_height"
        android:background="@drawable/my_button_bg_2"
        android:text="@string/stop_walk"
        android:textSize="@dimen/start_walk_btn_txt_size"
        app:layout_constraintLeft_toLeftOf="@id/btn_start_walk"
        app:layout_constraintRight_toRightOf="@id/btn_start_walk"
        app:layout_constraintTop_toTopOf="@id/btn_start_walk"
        app:layout_constraintBottom_toBottomOf="@id/btn_start_walk"/>

    <Button
        android:id="@+id/btn_start_walk"
        android:layout_width="@dimen/btn_start_walk_width"
        android:layout_height="@dimen/btn_start_walk_height"
        android:background="@drawable/my_button_bg"
        android:text="@string/start_walk"
        android:textSize="@dimen/start_walk_btn_txt_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_daily_distance"
        app:layout_constraintBottom_toTopOf="@id/tv_recent_walk_prompt"/>


    <TextView
        android:id="@+id/tv_recent_walk_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/most_recent_walk"
        android:textSize="@dimen/recent_walk_info_text_size"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_start_walk"
        app:layout_constraintBottom_toTopOf="@id/tv_recent_steps_prompt"/>

    <Button
        android:id="@+id/btn_mock_values"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mock_btn_text"
        android:layout_marginStart="@dimen/mock_btn_margin"
        app:layout_constraintLeft_toRightOf="@+id/tv_recent_walk_prompt"
        app:layout_constraintTop_toBottomOf="@id/btn_start_walk"
        app:layout_constraintBottom_toTopOf="@id/tv_recent_steps_prompt"/>

    <TextView
        android:id="@+id/tv_recent_steps_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_steps_prompt"
        android:textSize="@dimen/recent_walk_info_text_size"
        app:layout_constraintHorizontal_bias="@dimen/recent_walk_info_left_bias"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/tv_recent_steps"
        app:layout_constraintTop_toBottomOf="@id/tv_recent_walk_prompt"
        app:layout_constraintBottom_toTopOf="@id/tv_recent_distance_prompt"/>

    <TextView
        android:id="@+id/tv_recent_steps"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="@dimen/recent_walk_info_text_size"
        app:layout_constraintLeft_toLeftOf="@id/tv_recent_steps_prompt"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_recent_walk_prompt"
        app:layout_constraintBottom_toTopOf="@id/tv_recent_distance"/>


    <TextView
        android:id="@+id/tv_recent_distance_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/total_distance"
        android:textSize="@dimen/recent_walk_info_text_size"
        app:layout_constraintHorizontal_bias="@dimen/recent_walk_info_left_bias"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/tv_recent_distance"
        app:layout_constraintTop_toBottomOf="@id/tv_recent_steps_prompt"
        app:layout_constraintBottom_toTopOf="@id/tv_recent_time_elapsed_prompt"/>

    <TextView
        android:id="@+id/tv_recent_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="@dimen/recent_walk_info_text_size"
        app:layout_constraintLeft_toLeftOf="@id/tv_recent_steps"
        app:layout_constraintTop_toBottomOf="@id/tv_recent_steps_prompt"
        app:layout_constraintBottom_toTopOf="@id/tv_recent_time_elapsed_prompt"/>

    <TextView
        android:id="@+id/tv_recent_time_elapsed_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/time_elapsed"
        android:textSize="@dimen/recent_walk_info_text_size"
        app:layout_constraintHorizontal_bias="@dimen/recent_walk_info_left_bias"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/tv_recent_time_elapsed"
        app:layout_constraintTop_toBottomOf="@id/tv_recent_distance_prompt"
        app:layout_constraintBottom_toTopOf="@id/tv_no_recent_walk_prompt"/>

    <TextView
        android:id="@+id/tv_recent_time_elapsed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="@dimen/recent_walk_info_text_size"
        app:layout_constraintLeft_toLeftOf="@id/tv_recent_steps"
        app:layout_constraintTop_toBottomOf="@id/tv_recent_distance_prompt"
        app:layout_constraintBottom_toTopOf="@id/tv_no_recent_walk_prompt"/>

    <TextView
        android:id="@+id/tv_no_recent_walk_prompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_walk_today"
        android:textSize="@dimen/recent_walk_info_text_size"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_recent_time_elapsed_prompt"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"/>

    <Button
        android:id="@+id/btn_save_this_route"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save_prompt"
        android:textSize="@dimen/save_prompt_size"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_recent_time_elapsed_prompt"
        app:layout_constraintBottom_toTopOf="@id/bottom_navigation"/>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        app:itemIconTint="@color/colorPrimaryDark"
        app:itemTextColor="#000000"
        app:menu="@menu/bottom_nav_menu"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>