...

    <!--    In activity_home.xml-->
    <string name="daily_steps">Daily Steps</string>
    <string name="daily_distance">Daily Distance</string>
    <string name="daily_step_background">Background for Daily Steps</string>
    <string name="daily_distance_background">Background for Daily Distance</string>
    <string name="stop_walk">Stop Walk</string>
    <string name="most_recent_walk"> Most Recent Walk</string>
    <string name="mock_btn_text">Mock Values</string>
    <string name="no_walk_today">You haven\'t completed a walk today!</string>
    <string name="save_prompt">Save this route?</string>

    <!--    In activity_mock.xml-->
...
    <string name="btn_accept_team_invitation">Accept</string>
    <string name="btn_decline_team_invitation">Decline</string>
    <string name="text_invitation_not_exist">You don\'t have any pending invitations.</string>


    <!--    In both activity_loginxml and activity_mock.xml-->
    <string name="finish_btn_text">Finish</string>

    <!--    In both activity_home.xml and activity_route_details.xml-->
    <string name="total_steps_prompt">Total Steps: </string>
    <string name="total_distance">Total Distance: </string>
    <string name="time_elapsed">Time Elapsed: </string>
    <string name="start_walk">Start Walk</string>

    <!--    In both activity_route_details.xml and content_save_route.xml-->
    <string name="route_type">Route Type:</string>
    <string name="terrain_type">Terrain Type:</string>
    <string name="surface_type">Surface Type:</string>
    <string name="land_type">Land Type:</string>
...
